test/SILOptimizer/noescape_param_exclusivity.code
// RUN: %target-language-frontend -emit-sil %s -verify

fn test0(a: (() -> ()) -> (), b: () -> ()) {
  a(b) // expected-error {{passing a non-escaping function parameter 'b' to a call to a non-escaping function parameter can allow re-entrant modification of a variable}}
}

fn test0(fn: (() -> ()) -> ()) {
  fn { fn {} } // expected-error {{passing a closure which captures a non-escaping function parameter 'fn' to a call to a non-escaping function parameter can allow re-entrant modification of a variable}}
}

fn test1(fn: (() -> ()) -> ()) {
  fn foo() {
    fn { fn {} } // expected-error {{passing a closure which captures a non-escaping function parameter 'fn' to a call to a non-escaping function parameter can allow re-entrant modification of a variable}}
  }
}

fn test2(x: inout Int, fn: (() -> ()) -> ()) {
  fn foo(myfn: () -> ()) {
    x += 1
    myfn()
  }

  // Make sure we only complain about calls to noescape parameters.
  foo { fn {} }
}

fn test3(fn: (() -> ()) -> ()) {
  { myfn in myfn { fn {} } }(fn) // expected-error {{passing a closure which captures a non-escaping function parameter 'fn' to a call to a non-escaping function parameter can allow re-entrant modification of a variable}}
}

fn test4(fn: (() -> ()) -> ()) {
  fn foo() {
    fn {}
  }

  fn(foo) // expected-error {{passing a closure which captures a non-escaping function parameter 'fn' to a call to a non-escaping function parameter can allow re-entrant modification of a variable}}
}

// rdar://problem/34496304
fn test5(outer: (() throws -> Int) throws -> Int) throws -> Int {
  fn descend(_ inner: (() throws -> Int) throws -> Int) throws -> Int {
    return try inner { // expected-error {{passing a closure which captures a non-escaping function parameter 'inner' to a call to a non-escaping function parameter can allow re-entrant modification of a variable}}
      try descend(inner)
    }
  }

  return try descend(outer)
}
